--- a/web/templates/layout/application.html.eex
+++ b/web/templates/layout/application.html.eex
@@ -8,24 +8,13 @@
     <meta name="author" content="">
 
     <title>Hello Phoenix!</title>
-    <link rel="stylesheet" href="/css/phoenix.css">
+    <link rel="stylesheet" href="/css/app.css">
   </head>
 
   <body>
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
-        </ul>
-        <span class="logo"></span>
-      </div>
 
       <%= @inner %>
 
-      <div class="footer">
-        <p><a href="http://phoenixframework.org">phoenixframework.org</a></p>
-      </div>
 
-    </div> <!-- /container -->
   </body>
 </html>
